yaml_template/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
 name: kube-proxy
 namespace: kube-system
spec:
 revisionHistoryLimit: 10
 selector:
   matchLabels:
     k8s-app: kube-proxy
 template:
   spec:
     containers:
     - command:
       - /usr/local/bin/kube-proxy
       image: registry.aliyuncs.com/google_containers/kube-proxy:v1.19.2
       imagePullPolicy: IfNotPresent
       name: kube-proxy
