yaml_template/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openpai-service
spec:
  ports:
    - port: 80 # the port that this service should serve on
      # the container on each pod to connect to, can be a name
      # (e.g. 'www') or a number (e.g. 80)
      targetPort: 30005
      protocol: TCP
      nodePort: 30005
  # just like the selector in the deployment,
  # but this time it identifies the set of pods to load balance
  # traffic to.
  selector:
    app: pylon
  type: NodePort
