yaml_template/NetworkPolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
    - Engress  # 如果下面没有具体指出哪些pod，则是禁止所有。如果没有本行，表示不对engress做限制，则是允许所有
  ingress:
    - from:
        - namespaceSelector: #选择namespace
            matchLabels:
              user: alice
          podSelector:  # 选择pod
            matchLabels:
              access: 'true'
